--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta http-equiv="refresh" content="0; url=https://tealeg.smol.pub/" />
     <title>Also sprach tealeg...</title>
+    <script src="https://www.w3counter.com/tracker.js?id=154247"></script>
   </head>
   <body>
     <h1>Also sprach tealeg....</h1>
